# toolchains_llvm_testbench

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  build.cmd  defs.bzl  lowercase-tar.sh  rules_rust-lib_include.patch  rules_rust-musl.patch  rules_rust-verbose.patch
cc/clang-rt/: BUILD.bazel  main.cc
rust/: Cargo.toml  cargo-bazel-lock.json
rust/.cargo/: config.toml
rust/with-cc-build/: BUILD.bazel  Cargo.toml
rust/with-cc-build/src/: main.rs
sysroots/: .gitignore  BUILD.linux_aarch64  BUILD.windows_aarch64  README.md  build_sysroot_macos.sh  build_sysroot_windows.ps1
