bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "rules_cc", version = "0.2.17")
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        # "//:build/native/rules_cc-compiler_flags.patch",  # Ensure all default flags are propagated when using `windows_cc_toolchain_config.bzl`'s cc_toolchain_config
    ],
)

bazel_dep(name = "llvm", version = "0.6.1")
single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = [
        # "@//:build/native/llvm/llvm_fetch.patch" #  keep until https://github.com/cerisier/toolchains_llvm_bootstrapped/issues/346
    ],
)
register_toolchains("@llvm//toolchain:all")

windows_sysroot_transformations = {
    "include/driverspecs.h": "include/DriverSpecs.h",  # Linux respects case, and some of our source files in transitive dependencies mention `DriverSpecs.h` and not `driverspecs.h`
    "include/specstrings.h": "include/SpecStrings.h",  # Linux respects case, and some of our source files in transitive dependencies mention `SpecStrings.h` and not `specstrings.h`
    "**/*.h": "lowercase",  # Create lowercase duplicates of .h files
    "**/*.lib": "lowercase",  # Create lowercase duplicates of .lib files
    "**/*.Lib": "lowercase",  # Create lowercase duplicates of .Lib files
}

crossplatform_local_archive = use_repo_rule("//:defs.bzl", "crossplatform_local_archive")
local_archive = use_repo_rule("//:defs.bzl", "local_archive")

local_archive(
    # see `sysroots/README.md` to understand how this sysroot is built
    name = "sysroot-darwin",
    src = "//sysroots:sysroot-macos-SDK_15.5-5185e391ddaec47fc3c03b0bd85082b1.tar.gz",
    build_file = "@//sysroots:BUILD.darwin",
)

crossplatform_local_archive(
    # see `sysroots/README.md` to understand how this sysroot is built
    name = "sysroot-windows_aarch64",
    src = "//sysroots:sysroot-windows_aarch64-MSVC_14.50.35717-SDK_10.0.22621.0-1BEC42C526532C8C40162A045074FCE4.tar.gz",
    build_file = "@//sysroots:BUILD.windows_aarch64",
    transformations = windows_sysroot_transformations,
)

crossplatform_local_archive(
    # see `sysroots/README.md` to understand how this sysroot is built
    name = "sysroot-windows_x86_64",
    src = "//sysroots:sysroot-windows_x86_64-MSVC_14.50.35717-SDK_10.0.22621.0-1BEC42C526532C8C40162A045074FCE4.tar.gz",
    build_file = "@//sysroots:BUILD.windows_x86_64",
    transformations = windows_sysroot_transformations,
)

local_archive(
    # see `sysroots/README.md` to understand how this sysroot is built
    name = "sysroot-linux-aarch64",
    src = "//sysroots:sysroot-linux_aarch64_3.3.0.65682.tar.zst",
    build_file = "@//sysroots:BUILD.linux_aarch64",
)

local_archive(
    # see `sysroots/README.md` to understand how this sysroot is built
    name = "sysroot-linux-x86_64",
    src = "//sysroots:sysroot-linux_x86_64_3.3.0.65682.tar.zst",
    build_file = "@//sysroots:BUILD.linux_x86_64",
)

bazel_dep(name = "rules_rs", version = "0.0.39")
single_version_override(
    module_name = "rules_rs",
    patch_strip = 1,
    patches = [
      # "@//:build/native/rules_rs/rules_rs-create_features.patch",  # keep until https://github.com/dzbarsky/rules_rs/pull/50 is merged
    ],
)

rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

rust_toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
rust_toolchains.toolchain(
    edition = "2021",
    version = "1.93.1",
)
use_repo(rust_toolchains, "default_rust_toolchains")
register_toolchains("@default_rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",  # fleet_rust_crates name is short due to long path issues on Windows, we try to minimize the paths
    cargo_config = "//rust:.cargo/config.toml",
    cargo_lock = "//rust:Cargo.lock",
    cargo_toml = "//rust:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-pc-windows-msvc",
        "x86_64-pc-windows-msvc",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    use_experimental_platforms = True,  # musl support in features resolution of third-party dependencies
)

# TODO: having that error on Linux hosts
#   ERROR: /home/parallels/.cache/JetBrains/MonorepoBazel/51db59cda7fb4f6e1c59be8fdb33a1fc/external/xz+/BUILD.bazel:274:11: Linking external/xz+/liblzma_src_common.a failed: (Exit 1): llvm-ar failed: error executing CppArchive command (from target @@xz+//:lzma_src_common) external/toolchains_llvm++llvm+llvm_toolchain/bin/llvm-ar @bazel-out/x86_64-apple-darwin-fastbuild/bin/external/xz+/liblzma_src_common.a-0.params
#
#   Use --sandbox_debug to see verbose messages from the sandbox and retain the sandbox build root for debugging
#   external/toolchains_llvm++llvm+llvm_toolchain/bin/llvm-ar: error: unknown option n
#   OVERVIEW: LLVM Archiver
#
#   USAGE: llvm-ar [options] [-]<operation>[modifiers] [relpos] [count] <archive> [files]
#          llvm-ar -M [<mri-script]

# bazel_dep(name = "zstd", version = "1.5.7.bcr.1")
crate.annotation(
    crate = "zstd-sys",
    gen_build_script = "on",
    # gen_build_script = "off",  # do not build `zstd` from git submodule sources, resolve it from BCR instead
    # deps = ["@zstd"],
)
# inject_repo(crate, "zstd")

use_repo(crate, "crates")