bazel_dep(name = "platforms", version = "1.0.0")

bazel_dep(name = "rules_cc", version = "0.2.17")
single_version_override(
    module_name = "rules_cc",
    patch_strip = 1,
    patches = [
        # "//:build/native/rules_cc-compiler_flags.patch",  # Ensure all default flags are propagated when using `windows_cc_toolchain_config.bzl`'s cc_toolchain_config
    ],
)

bazel_dep(name = "llvm", version = "0.6.1")
single_version_override(
    module_name = "llvm",
    patch_strip = 1,
    patches = [
        "//:build/native/llvm/llvm_msvc.patch",  # MSVC support
    ],
)

msvc = use_extension("@llvm//runtimes/msvc/extension:msvc.bzl", "msvc")
msvc.winsysroot()
use_repo(msvc, "windows_sdk", "windows_sdk_x64", "windows_sdk_arm64")
register_toolchains("@llvm//toolchain:all")

bazel_dep(name = "rules_rs", version = "0.0.39")
single_version_override(
    module_name = "rules_rs",
    patch_strip = 1,
    patches = [
      # "@//:build/native/rules_rs/rules_rs-create_features.patch",  # keep until https://github.com/dzbarsky/rules_rs/pull/50 is merged
    ],
)

rules_rust = use_extension("@rules_rs//rs/experimental:rules_rust.bzl", "rules_rust")
use_repo(rules_rust, "rules_rust")

rust_toolchains = use_extension("@rules_rs//rs/experimental/toolchains:module_extension.bzl", "toolchains")
rust_toolchains.toolchain(
    edition = "2021",
    version = "1.93.1",
)
use_repo(rust_toolchains, "default_rust_toolchains")
register_toolchains("@default_rust_toolchains//:all")

crate = use_extension("@rules_rs//rs:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",  # fleet_rust_crates name is short due to long path issues on Windows, we try to minimize the paths
    cargo_config = "//rust:.cargo/config.toml",
    cargo_lock = "//rust:Cargo.lock",
    cargo_toml = "//rust:Cargo.toml",
    platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-apple-darwin",
        "aarch64-pc-windows-msvc",
        "x86_64-pc-windows-msvc",
        "aarch64-unknown-linux-musl",
        "x86_64-unknown-linux-musl",
        "aarch64-unknown-linux-gnu",
        "x86_64-unknown-linux-gnu",
    ],
    use_experimental_platforms = True,  # musl support in features resolution of third-party dependencies
)

bazel_dep(name = "zstd", version = "1.5.7.bcr.1")
crate.annotation(
    crate = "zstd-sys",
    gen_build_script = "off",  # do not build `zstd` from git submodule sources, resolve it from BCR instead
    deps = ["@zstd"],
)
inject_repo(crate, "zstd")

use_repo(crate, "crates")