load("//:defs.bzl", "rust_crate")

rust_crate(
    name = "example",
    crate_name = "example",
    platforms = [
        "@rules_rs//rs/experimental/platforms:aarch64-unknown-linux-musl",
        "@rules_rs//rs/experimental/platforms:x86_64-unknown-linux-musl",
        "@rules_rs//rs/experimental/platforms:aarch64-unknown-linux-gnu",
        "@rules_rs//rs/experimental/platforms:x86_64-unknown-linux-gnu",
        "@rules_rs//rs/experimental/platforms:aarch64-apple-darwin",
        "@rules_rs//rs/experimental/platforms:x86_64-apple-darwin",
        "@rules_rs//rs/experimental/platforms:aarch64-pc-windows-msvc",
        "@rules_rs//rs/experimental/platforms:x86_64-pc-windows-msvc",
    ],
)
